// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should properly render expenses summary 1`] = `
<div>
  <h4>
    
                Viewing 3 
                expenses
                totaling $5.00
                
  </h4>
  <h3 />
</div>
`;

exports[`should properly render expenses summary with no expenses 1`] = `
<div>
  <h4>
    
                Viewing 0 
                expenses
                totaling $0.00
                
  </h4>
  <h3 />
</div>
`;
